Fix layout issues

--- a/service-manual/assets/stylesheets/views/_category-index.scss
+++ b/service-manual/assets/stylesheets/views/_category-index.scss
@@ -41,6 +41,10 @@
         border-bottom: none;
         margin: 1.2em 0 0.4em 0;
       }
+
+      img {
+        max-width: 100%;
+      }
     }
   }
 }
